# aprsd-borat-plugin

./: AUTHORS.rst  CONTRIBUTING.rst  ChangeLog  HISTORY.rst  README.md  pyproject.toml  setup.cfg  tox.ini
aprsd_borat_plugin/: __init__.py  aprsd_borat_plugin.py  quotes.py
aprsd_borat_plugin/conf/: __init__.py
docs/source/: conf.py  index.rst  readme.rst
docs/source/apidoc/: aprsd_borat_plugin.conf.rst  aprsd_borat_plugin.rst  modules.rst
